[package]
name = "PIEstimator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_flycam = "0.15.0"
bevy_rapier3d = "0.29.0"  # for 3D simulation, change to `bevy_rapier2d` for 2D


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3


